--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@ewnd9/foodie",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "ts-node src/cli"
+  },
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/puppeteer-core": "^2.0.0",
